fix: improve Footer readability & usability
- Improve Footer readability & usability
- Limit maximum width of the text content
  - Make the content more readable
- Increase font size from 12px to 14px
- Increase line height
  - Avoid too tight line spacing
- Add whitespace around CC license image
- Add line break before CC license name
  - Avoid situation where only part of the name
    is at the end of the line
- Adjust text & link color to darker color
  to make the content more visible for people
- Add link hover style to improve usability

--- a/pandemia-fi/src/components/layout/footer.css
+++ b/pandemia-fi/src/components/layout/footer.css
@@ -1,11 +1,23 @@
 .layout__footer {
-  color: #a6acbe;
+  color: #353842;
   text-align: center;
   padding: 30px;
   margin-top: auto;
-  font-size: 12px;
+  margin: auto auto 0;
+  font-size: 14px;
+  line-height: 3ex;
+  max-width: 30em;
 }
 
 .layout__footer a {
-  color: #a6acbe;
+  color: #353842;
+}
+
+.layout__footer a:hover {
+  color: #000000;
+}
+
+.image__cc_by_sa {
+  display: inline-block;
+  margin: 5px;
 }
